做好字节对齐，添加自己的数据解析操作

--- a/sy_glove_with_mpu/.vscode/settings.json
+++ b/sy_glove_with_mpu/.vscode/settings.json
@@ -8,7 +8,8 @@
         "main.h": "c",
         "usart.h": "c",
         "gpio.h": "c",
-        "cmsis_os.h": "c"
+        "cmsis_os.h": "c",
+        "thread_of_sensor_calibration.h": "c"
     },
     "cortex-debug.armToolchainPath": "D:\\STM32FORVSCODE_TOOLS\\GCC-ARM-NONE-EABI-10.3-2021.10-WIN32\\GCC-ARM-NONE-EABI-10.3-2021.10\\BIN",
     "cortex-debug.openocdPath": "D:\\STM32FORVSCODE_TOOLS\\OPENOCD-20230202\\OPENOCD-20230202-0.12.0\\BIN\\OPENOCD.EXE"
