--- a/sy_glove_with_mpu/.vscode/settings.json
+++ b/sy_glove_with_mpu/.vscode/settings.json
@@ -11,7 +11,11 @@
         "cmsis_os.h": "c",
         "thread_of_sensor_calibration.h": "c",
         "freertosconfig.h": "c",
-        "reent.h": "c"
+        "reent.h": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c",
+        "ranges": "c"
     },
     "cortex-debug.armToolchainPath": "D:\\STM32FORVSCODE_TOOLS\\GCC-ARM-NONE-EABI-10.3-2021.10-WIN32\\GCC-ARM-NONE-EABI-10.3-2021.10\\BIN",
     "cortex-debug.openocdPath": "D:\\STM32FORVSCODE_TOOLS\\OPENOCD-20230202\\OPENOCD-20230202-0.12.0\\BIN\\OPENOCD.EXE"
